# test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  models.dvc  pyproject.toml  setup.py  start.py
.dvc/: config  config_example
data/: raw.dvc
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: EDA.ipynb  evaluate_models.ipynb
src/: __init__.py
src/data/: __init__.py  clean_data.py  config.py  make_dataset.py  parse_data.py  prepare_data.py  utils.py
src/models/: __init__.py  bert_models.py  config.py  model.py  models.py  pl_datamodule.py  train_model.py  utils.py
