[tool.poetry]
name = "kaspersky-test"
version = "0.1.0"
description = ""
authors = ["xrabroff <xrabroff.dmitry@yandex.ru>"]
readme = "README.md"
packages = [{include = "kaspersky_test"}]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^2.58.2"
dvc-s3 = "^2.22.0"
pandas = "^2.0.2"
torch = "^2.0.1"
pytorch-lightning = "^2.0.2"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
