[tool.poetry]
name = "kaspersky-test"
version = "0.1.0"
description = ""
authors = ["xrabroff <xrabroff.dmitry@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
dvc = "^2.58.2"
dvc-s3 = "^2.22.0"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu117/torchaudio-2.0.2%2Bcu117-cp310-cp310-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-win_amd64.whl"}
pandas = "^2.0.2"
pytorch-lightning = "^2.0.2"
transformers = "^4.29.2"
scikit-learn = "^1.2.2"
python-dotenv = "^1.0.0"
black = "^23.3.0"
torchmetrics = "^0.11.4"
tensorboard = "^2.13.0"
scikit-multilearn = "^0.2.0"
torch-tb-profiler = "^0.4.1"
iterative-stratification = "^0.1.7"
pylint = "^2.17.4"
autoflake = "^2.1.1"
reorder-python-imports = "^3.9.0"
yesqa = "^1.4.0"
pre-commit = "^3.3.2"
pyupgrade = "^3.4.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
